# multidict

./: setup.cfg  tox.ini
multidict/: __init__.py  __init__.pyi  _abc.py  _multidict.c  _multidict.pyx  _multidict_py.py  istr.py
requirements/: ci.txt  wheel.txt
tests/: test_istr.py
