[aliases]
test = pytest

[metadata]
license_file = LICENSE
long_description = file: README.rst

[mypy]
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-multidict]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = error
strict_optional = true

[mypy-pytest]
ignore_missing_imports = true


[mypy-multidict._multidict]
ignore_missing_imports = true
